2013-08-21  Jeff Law  <law@redhat.com>

	Revert:
	2013-08-20  Alexey Makhalov  <makhaloff@gmail.com>

        * dce.c (fini_dce): Call df_analyze again just in case
	delete_unmarked_insns removed anything.

2013-08-21  Joern Rennecke  <joern.rennecke@embecosm.com>

	* reload.h (struct reg_equivs): Rename to ..
	(struct reg_equivs_s): .. this.

2013-08-20  Martin Liska  <marxin.liska@gmail.com>

	* ipa.c (ipa_profile_read_summary): Fix buffer overflow.

2013-08-21  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* config/sol2-10.h (TARGET_LIBC_HAS_FUNCTION): Don't nest
	comment.

2013-08-21  Jeff Law  <law@redhat.com>

	* tree-vrp.c (simplify_stmt_for_jump_threading): Try to
	simplify assignments too.  If the RHS collapses to a singleton
	range, then return the value for the range.

2013-08-21  Kirill Yukhin  <kirill.yukhin@intel.com>

        * config/i386/sse.md (V16): Rename to...
        (VMOVE): this.
        (mov<mode>): Update iterator name.
        (*mov<mode>_internal): Ditto.
        (push<mode>1): Ditto.
        (movmisalign<mode>): Ditto.

2013-08-20  Jan Hubicka  <jh@suse.cz>

	PR bootstrap/58186
	* cgraph.c (cgraph_add_edge_to_call_site_hash): Overwrite hash
	entry for direct edges.
	(cgraph_turn_edge_to_speculative): Fix setting of can_throw_external.

2013-08-20  David Malcolm  <dmalcolm@redhat.com>

	Revert my last two changes, r201865 and r201864:

	Revert r201865:
	2013-08-20  David Malcolm  <dmalcolm@redhat.com>

	Make opt_pass and gcc::pass_manager be GC-managed, so that pass
	instances can own GC refs.

	* Makefile.in (GTFILES): Add pass_manager.h and tree-pass.h.
	* context.c (gcc::context::gt_ggc_mx): Traverse passes_.
	(gcc::context::gt_pch_nx): Likewise.
	(gcc::context::gt_pch_nx):  Likewise.
	* ggc.h (gt_ggc_mx <T>): New.
	(gt_pch_nx_with_op <T>): New.
	(gt_pch_nx <T>): New.
	* passes.c (opt_pass::gt_ggc_mx): New.
	(opt_pass::gt_pch_nx): New.
	(opt_pass::gt_pch_nx_with_op): New.
	(pass_manager::gt_ggc_mx): New.