@@ -1,5 +1,12 @@
 2013-08-21  Jeff Law  <law@redhat.com>
 
+	* tree-flow.h (register_jump_thread): Pass vector of edges
+	instead of each important edge.
+	* tree-ssa-threadedge.c (thread_across_edge): Build the jump
+	thread path into a vector and pass that to register_jump_thread.
+	* tree-ssa-threadupdate.c (register_jump_thread): Conver the
+	passed in edge vector to the current 3-edge form.
+
 	Revert:
 	2013-08-20  Alexey Makhalov  <makhaloff@gmail.com>
 
